--- a/.gitignore
+++ b/.gitignore
@@ -695,3 +695,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,windows,macos,linux,test
+
+.idea
