--- a/src/MasFinalProj.API/appsettings.json
+++ b/src/MasFinalProj.API/appsettings.json
@@ -9,13 +9,26 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost, 5434;User Id=sa;Password=Test123$;Trust Server Certificate=true;Database=MasProjectFinal"
   },
-  "Jwt": {
-    "Key": "c50167d7350aJSDWb9121aa99a4e1dAdea2",
-    "Issuer": "https://cg-personal.vercel.app/"
+  "Auth": {
+    "Jwt": {
+      "Key": "c50167d7350aJSDWb9121aa99a4e1dAdea2",
+      "Issuer": "https://cg-personal.vercel.app/"
+    },
+    "Discord": {
+      "ClientId": "1248965545550811218",
+      "ClientSecret": "OAh9hOvhqyOdwOSlcT8INvYIIM9KsWAf",
+      "GrantType": "authorization_code",
+      "ResponseType": "code",
+      "RedirectUri": "http://localhost:5128/api/v1/user/auth/discord/callback",
+      "Scope": "gdm.join+guilds+identify+email"
+    }
   },
   "AllowedOrigins": [
+    "http://localhost:5129",
+    "http://localhost:5128",
     "http://localhost:5173",
     "https://localhost:5173",
+    "https://localhost:7149/",
     "https://www.roleplay-manager.com"
   ],
   "Serilog": {
