--- a/src/MasFinalProj.API/MasFinalProj.API.csproj
+++ b/src/MasFinalProj.API/MasFinalProj.API.csproj
@@ -20,6 +20,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.6.0" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0" />
         <PackageReference Include="Serilog" Version="4.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
