--- a/src/MasFinalProj.Web/package.json
+++ b/src/MasFinalProj.Web/package.json
@@ -29,7 +29,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2",
+    "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
