--- a/src/MasFinalProj.Web/package.json
+++ b/src/MasFinalProj.Web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^9.5.0",
+    "@microsoft/signalr": "^8.0.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-signalr-hub": "^1.0.0",
     "zustand": "^4.5.2",
     "zustand-persist": "^0.4.0"
   },
