--- a/src/MasFinalProj.Web/package.json
+++ b/src/MasFinalProj.Web/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.40.1",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
