Feat add better chat and images handling

--- a/src/MasFinalProj.API/MasFinalProj.API.csproj
+++ b/src/MasFinalProj.API/MasFinalProj.API.csproj
@@ -40,4 +40,8 @@
       <ProjectReference Include="..\MasFinalProj.Persistence\MasFinalProj.Persistence.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Images\" />
+    </ItemGroup>
+
 </Project>
