feat add copyright changes

--- a/src/MasFinalProj.API/appsettings.json
+++ b/src/MasFinalProj.API/appsettings.json
@@ -11,12 +11,12 @@
   },
   "Auth": {
     "Jwt": {
-      "Key": "c50167d7350aJSDWb9121aa99a4e1dAdea2",
-      "Issuer": "https://cg-personal.vercel.app/"
+      "Key": "783ryh3h1327F3r9j",
+      "Issuer": "https://localhost:5128"
     },
     "Discord": {
-      "ClientId": "1248965545550811218",
-      "ClientSecret": "OAh9hOvhqyOdwOSlcT8INvYIIM9KsWAf",
+      "ClientId": "1111111111111111111",
+      "ClientSecret": "OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO",
       "GrantType": "authorization_code",
       "ResponseType": "code",
       "RedirectUri": "http://localhost:5128/api/v1/user/auth/discord/callback",
@@ -29,7 +29,6 @@
     "http://localhost:5173",
     "https://localhost:5173",
     "https://localhost:7149/",
-    "https://www.roleplay-manager.com"
   ],
   "Serilog": {
     "Using": [
